[package]
name = "miden-proving-service-client"
version = "0.10.0"
description = "Client library for the Miden blockchain proving service"
readme = "README.md"
keywords = ["miden", "proving", "service"]
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
crate-type = ["lib"]

[features]
default = ["std"]
std = ["miden-objects/std", "miden-tx/std"]
tx-prover = ["miden-tx/async", "dep:tokio", "dep:miden-objects"]
batch-prover = ["dep:tokio", "dep:miden-objects"]
block-prover = ["dep:tokio", "dep:miden-objects"]

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
tonic-web-wasm-client = { version = "0.6", default-features = false }
tonic = { version = "0.12", default-features = false, features = ["prost", "codegen"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dependencies]
tonic = { version = "0.12", default-features = false, features = ["prost", "codegen", "transport"] }
tonic-web = { version = "0.12", optional = true }

[dependencies]
async-trait = "0.1"
miden-objects = { workspace = true, default-features = false, optional = true }
miden-tx = { workspace = true, default-features = false, optional = true }
prost = { version = "0.13", default-features = false, features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.44", default-features = false, features = ["sync"], optional = true }

[build-dependencies]
miette = { version = "7.5", features = ["fancy"] }
prost = { version = "0.13", default-features = false, features = ["derive"] }
prost-build = { version = "0.13" }
protox = { version = "0.7" }
tonic-build = { version = "0.12" }

