
[package]
name = "miden-test"
version = "0.9.0"
description = "Miden test tools"
readme = "README.md"
categories = ["no-std"]
keywords = ["miden", "mock", "test"]
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[[test]]
name = "miden-integration-tests"
path = "tests/integration/main.rs"

[features]
async = ["winter-maybe-async/async"]
masm-debug = ["miden-lib/with-debug-info"]

[dependencies]
async-trait = "0.1"
miden-lib = { workspace = true, features = ["testing"] }
miden-tx = { workspace = true, features = ["testing"] }
miden-objects = { workspace = true, features = ["testing"] }
miden-crypto = { workspace = true }
rand = { workspace = true }
vm-processor = { workspace = true }
winter-maybe-async = { version = "0.12" }
rand_chacha = { version = "0.9", default-features = false }

[dev-dependencies]
anyhow = { version = "1.0", default-features = false, features = ["std", "backtrace"]}
assembly = { workspace = true }
assert_matches = { workspace = true }
winterfell = { version = "0.12" }
miden-block-prover = { workspace = true }

[package.metadata.cargo-machete]
# cargo machete flags async-trait as unused but it is used by winter-maybe-async with the async feature
ignored = ["async-trait"]
