[package]
name = "miden-testing"
version = "0.10.0"
description = "Miden protocol testing tools"
readme = "README.md"
categories = ["no-std"]
keywords = ["miden", "mock", "test"]
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[[test]]
name = "miden-integration-tests"
path = "tests/integration/main.rs"

[features]
async = ["winter-maybe-async/async"]
masm-debug = ["miden-lib/with-debug-info"]

[dependencies]
anyhow = { version = "1.0", default-features = false }
async-trait = "0.1"
miden-block-prover = { workspace = true, features = ["testing"] }
miden-crypto = { workspace = true }
miden-lib = { workspace = true, features = ["testing"] }
miden-objects = { workspace = true, features = ["testing"] }
miden-tx = { workspace = true, features = ["testing"] }
rand_chacha = { version = "0.9", default-features = false }
rand = { workspace = true }
vm-processor = { workspace = true }
winter-maybe-async = { version = "0.12" }
winterfell = { version = "0.12" }

[dev-dependencies]
anyhow = { version = "1.0", features = ["std", "backtrace"] }
assembly = { workspace = true }
assert_matches = { workspace = true }
rand = { workspace = true, features = ["os_rng", "small_rng"] }
miden-objects = { workspace = true, features = ["std"] }

[package.metadata.cargo-machete]
# cargo machete flags async-trait as unused but it is used by winter-maybe-async with the async feature
ignored = ["async-trait"]
