[package]
name = "miden-tx-batch-prover"
version = "0.8.0"
description = "Miden rollup transaction batch executor and prover"
readme = "README.md"
categories = ["no-std"]
keywords = ["miden", "batch", "prover"]
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
bench = false

[features]
default = ["std"]
std = [
  "miden-objects/std",
  "miden-tx/std",
  "miden-crypto/std",
  "vm-core/std",
  "vm-processor/std",
]

[dependencies]
miden-crypto = { workspace = true }
miden-tx = { workspace = true }
miden-objects = { workspace = true }
thiserror = { workspace = true }
vm-core = { workspace = true }
vm-processor = { workspace = true }

[dev-dependencies]
anyhow = { version = "1.0", features = ["std", "backtrace"] }
miden-lib = { workspace = true, features = ["std", "testing"] }
miden-tx = { workspace = true, features = ["std", "testing"] }
rand = { workspace = true, features = ["small_rng"] }
winterfell = { version = "0.11" }
