[package]
name = "miden-tx-batch-prover"
version = "0.10.0"
description = "Miden blockchain transaction batch executor and prover"
readme = "README.md"
categories = ["no-std"]
keywords = ["miden", "batch", "prover"]
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
bench = false

[features]
default = ["std"]
std = ["miden-objects/std", "miden-tx/std"]

[dependencies]
miden-tx = { workspace = true }
miden-objects = { workspace = true }
