[package]
name = "miden-tx"
version = "0.10.0"
description = "Miden blockchain transaction executor and prover"
readme = "README.md"
categories = ["no-std"]
keywords = ["miden", "transaction"]
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[features]
async = ["winter-maybe-async/async"]
concurrent = ["miden-prover/concurrent", "std"]
default = ["std"]
std = ["miden-lib/std", "miden-objects/std", "miden-prover/std", "miden-verifier/std", "vm-processor/std"]
testing = ["miden-objects/testing", "miden-lib/testing", "vm-processor/testing"]

[dependencies]
async-trait = "0.1"
miden-lib = { workspace = true }
miden-objects = { workspace = true }
miden-prover = { workspace = true }
miden-verifier = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
vm-processor = { workspace = true }
winter-maybe-async = { version = "0.12" }

[dev-dependencies]
anyhow = { version = "1.0", default-features = false, features = ["std", "backtrace"]}
assembly = { workspace = true }
assert_matches = { workspace = true }
miden-tx = { path = ".", features = ["testing"] }

[package.metadata.cargo-machete]
# cargo machete flags async-trait as unused but it is used by winter-maybe-async with the async feature
ignored = ["async-trait"]
